--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-.footer {
+#footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
-  color: white;
+  font-size: 40px;
+  color: rgb(189, 41, 41);
   text-align: center;
 }
