--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
   width: 100%;
   font-size: 40px;
   color: rgb(189, 41, 41);
